# Dragee

./: .gitignore  Dragee.ino  Dragee_IoT_Esp32.ino  Dragee_IoT_Machine.ino  Draze.fzz  Draze_scheme.fzz  Embeded_IoT_Project.code-workspace  Embeded_IoT_Project.ino  Enc.h  Flag.h  LedSts.h  LinkedList.h  PID_v2.cpp  PID_v2.h  Pid.h  PidScreenLCD.h  README.md  RTC.h  Relay.h  SwitchButton.h  Thermostat.h  VirtTempSensor.h  arduino.code-profile  btns.h  charList.h  countTimer.h  countUpTimer.h  dallas_sensor.h  debug_helper.h  diagram.json  draze_main.ino  encoder.h  file_sys.h  flags.h  lcd.h  led.h  mDef.h  menu.h  pid.h  pins.h  (+11 more)
HelloWorld/: HelloWorld.ino
PID/: GyverPID.h  LinkedList.h  Pid.h  TempRelay.h  TermoRelay.h  Thermostat.h  lcdThermoPid.h
Timer/: CountTimer.h  timeLogic.h
buttons/: diagram.json  libraries.txt  wokwi-project.txt
ctrlModule/: Enc.h  SwitchButton.h  initBtns.h
data/: change_mode.html  graph.html  help.html  home.html  index.html  schedule.html  setup.html  style.css
extra/: BtnRelay.h  Draze_scheme.fzz  Thermostat.h  (+4 more)
lib/MenuLib/: CMakeLists.txt  CharOperation.cpp  DataLine.cpp  Line.cpp  Menu.cpp  Menulib.cpp  Menulib.h  Screen.cpp  component.mk  initBlock.cpp  keywords.txt  library.json  library.properties
lib/MenuLib/examples/AllSymbols/: AllSymbols.ino
lib/MenuLib/examples/Autoscroll/: Autoscroll.ino
lib/MenuLib/examples/Blink/: Blink.ino
lib/MenuLib/examples/CompleteTest/: CompleteTest.ino
lib/MenuLib/examples/Cursor/: Cursor.ino
lib/MenuLib/src/: MenuLib.h
lib/MenuLib/src/coreMenu/: MenuLib.h  initBlock.cpp
(+151 files in other folders)
